merge and refactor pull request #78 fixing #74